# cloud-function-python

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: app_module.py
app/domain/model/: config_model.py  file_model.py
app/domain/repository/: config_repository_interface.py  del_files_repository_interface.py  get_files_repository_interface.py  logger_repository_interface.py  send_files_repository_interface.py
app/domain/use_case/: load_config_use_case.py  load_config_use_case_interface.py  transfer_files_use_case.py  transfer_files_use_case_interface.py
app/domain/validator/: config_validator_interface.py
app/infrastructure/configuration/: certify_config_repository.py  certify_config_repository_interface.py  connector_config_repository_interface.py  destination_config_repository.py  destination_config_repository_interface.py  environment_config_repository.py  environment_config_repository_interface.py  secret_config_repository.py  secret_config_repository_interface.py  source_config_repository.py  source_config_repository_interface.py  timezone_config_repository.py  timezone_config_repository_interface.py
app/infrastructure/connector/: sftp_connector.py  sftp_connector_interface.py  sftp_connector_options.py  sftp_connector_options_interface.py
app/infrastructure/constants/: encodings_enum.py
app/infrastructure/exception/: gateway_exception.py  mapper_exception.py
app/infrastructure/gateway/: del_file_gateway.py  del_file_gateway_interface.py  get_file_gateway.py  get_file_gateway_interface.py  get_files_gateway.py  get_files_gateway_interface.py  send_file_gateway.py  send_file_gateway_interface.py
app/infrastructure/logger/: logger_config.py  logger_extras.py  logger_extras_interface.py  logger_repository.py
app/infrastructure/mapper/: config_mapper.py  config_mapper_interface.py  config_merge_mapper.py  config_merge_mapper_interface.py  file_compress_mapper.py  file_compress_mapper_interface.py  file_crypto_mapper.py  file_crypto_mapper_interface.py  file_csv_group_mapper.py  file_csv_group_mapper_interface.py  file_csv_key_mapper.py  file_csv_key_mapper_interface.py  file_csv_split_mapper.py  file_csv_split_mapper_interface.py  file_decompress_full_mapper.py  file_decompress_full_mapper_interface.py  file_decompress_mapper.py  file_decompress_mapper_interface.py  file_decompress_raw_mapper.py  file_decompress_raw_mapper_interface.py  file_mapper.py  file_mapper_interface.py  file_zip_info_mapper.py  file_zip_info_mapper_interface.py  file_zip_raw_reader_mapper.py  file_zip_raw_reader_mapper_interface.py  file_zip_raw_split_mapper.py  file_zip_raw_split_mapper_interface.py  file_zip_reader_mapper.py  file_zip_reader_mapper_interface.py  files_compress_mapper.py  files_compress_mapper_interface.py  files_csv_split_mapper.py  files_csv_split_mapper_interface.py  files_filtered_mapper.py  files_filtered_mapper_interface.py  files_filters_mapper.py  files_filters_mapper_interface.py  files_group_mapper.py  files_group_mapper_interface.py  (+4 more)
app/infrastructure/repository/: config_repository.py  del_files_repository.py  get_files_repository.py  send_files_repository.py
app/infrastructure/security/: base64_security.py  base64_security_interface.py  pgp_gnupg_crypto_security.py  pgp_gnupg_crypto_security_interface.py  secret_manager_security.py  secret_manager_security_interface.py
app/infrastructure/validator/: config_schema.py  config_validator.py  optional_string_schema.py  required_integer_schema.py  required_string_schema.py
tests/: test_app_module.py
tests/domain/use_case/: test_load_config_use_case.py  test_trasfer_files_use_case.py
tests/infrastructure/configuration/: test_certify_config_repository.py  test_destination_config_repository.py  test_environment_config_repository.py  test_secret_config_repository.py  test_source_config_repository.py  test_timezone_config_repository.py
tests/infrastructure/connector/: test_sftp_connector.py  test_sftp_connector_options.py
tests/infrastructure/gateway/: test_del_file_gateway.py  test_get_file_gateway.py  test_get_files_gateway.py  test_send_file_gateway.py
tests/infrastructure/logger/: test_logger_config.py  test_logger_extras.py  test_logger_repository.py
tests/infrastructure/mapper/: test_config_mapper.py  test_config_merge_mapper.py  test_file_compress_mapper.py  test_file_crypto_mapper.py  test_file_csv_group_mapper.py  test_file_csv_key_mapper.py  test_file_csv_split_mapper.py  test_file_decompress_full_mapper.py  test_file_decompress_mapper.py  test_file_decompress_raw_mapper.py  test_file_mapper.py  test_file_zip_info_mapper.py  test_file_zip_raw_reader_mapper.py  test_file_zip_raw_split_mapper.py  test_file_zip_reader_mapper.py  test_files_compress_mapper.py  test_files_csv_split_mapper.py  test_files_filtered_mapper.py  test_files_filters_mapper.py  test_files_group_mapper.py  test_files_mapper.py  test_files_search_mapper.py
tests/infrastructure/repository/: test_config_repository.py  test_del_files_repository.py  test_get_files_repository.py  test_send_files_repository.py
tests/infrastructure/security/: test_base64_security.py  test_pgp_gnupg_crypto_security.py  test_secret_manager_security.py
tests/infrastructure/validator/: test_config_validator.py  test_optional_string_schema.py  test_required_integer_schema.py  test_required_string_schema.py
